# NewTube

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2025-05-04-175801_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/controller/: usercontroller.rs  videocontroller.rs
src/model/: usermodel.rs  videomodel.rs
src/repository/: userrepository.rs
src/security/: authentication.rs
src/service/: userservice.rs
