[package]
name = "NewTube"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.219"
jsonwebtoken = "9.3.1"
uuid = "1.16.0"
tokio = "1.44.2"
bcrypt = "0.17.0"
sqlx = "0.8.3"
diesel = "2.2.9"
chrono = "0.4.41"
dotenv = "0.15.0"
serde_json = "1.0.140"